# LANGCHAIN

./: .gitignore  Readme.md  class_eight.ipynb  class_exercice_1.ipynb  class_five.ipynb  class_forth.ipynb  class_hangingfacehub.ipynb  class_nine.ipynb  class_one.ipynb  class_seven.ipynb  class_six.ipynb  class_ten.ipynb  class_three.ipynb  class_two.ipynb  pyproject.toml  requiments.txt
