[project]
name = "curso-asimov"
version = "0.1.0"
description = ""
authors = [
    {name = "Gregorio Honorato",email = "gregorio.honorato@azos.com.br"}
]
requires-python = ">=3.11"
dependencies = [
    "tiktoken (>=0.12.0,<0.13.0)",
    "langchain (>=1.2.15,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langchain-chroma (>=1.1.0,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langchain-classic (>=1.0.3,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langchain-community (>=0.4.1,<0.5.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langchain-core (>=1.2.26,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langchain-huggingface (>=1.2.1,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langgraph (>=1.1.6,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langgraph-checkpoint (>=4.0.1,<5.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langgraph-prebuilt (>=1.0.9,<2.0.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langgraph-sdk (>=0.3.12,<0.4.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\"",
    "langsmith (>=0.7.25,<0.8.0) ; python_version >= \"3.13\" and python_full_version < \"4.0.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
